--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,8 @@
             "symfony/flex": true,
             "symfony/runtime": true
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "bin-dir": "bin"
     },
     "autoload": {
         "psr-4": {
@@ -93,6 +94,7 @@
         }
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.16",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.2.*",
         "symfony/css-selector": "6.2.*",
